name:           tapl
cabal-version:  1.12
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/tapl#readme>
homepage:       https://github.com/githubuser/tapl#readme
bug-reports:    https://github.com/githubuser/tapl/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/tapl

library
  exposed-modules:
      Arith.Evaluator
      Arith.Parser
      Untyped.Evaluator
      Untyped.Parser
  other-modules:
      Paths_tapl
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , mtl
    , containers
    , parsec
  default-language: Haskell2010

executable tapl-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , miso
    , tapl
    , text
  default-language: Haskell2010
  if impl(ghcjs)
    ghc-options: -dedupe
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers, warp, websockets

test-suite tapl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ArithSpec
      UntypedSpec
      Paths_tapl
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , tapl
  default-language: Haskell2010
